# src/models/user.model.ts
@@ -1,20 +1,64 @@
 import mongoose from 'mongoose';
 import { encrypt } from '../utils/encryption';
+
 import { renderMailHtml, sendMail } from '../utils/mail/mail';
 import { CLIENT_HOST, EMAIL_SMTP_USER } from '../utils/env';
 import { ROLES } from '../utils/constant';
+import * as Yup from 'yup';
+
+const validatePassword = Yup.string()
+	.required()
+	.min(6, 'Password must be at least 6 characters')
+	.test(
+		'at-least-one-uppercase-letter',
+		'Contains at least one uppercase letter',
+		(value) => {
+			if (!value) return false;
+			const regex = /^(?=.*[A-Z])/;
+			return regex.test(value);
+		}
+	)
+	.test(
+		'at-least-one-number',
+		'Contains at least one uppercase letter',
+		(value) => {
+			if (!value) return false;
+			const regex = /^(?=.*\d)/;
+			return regex.test(value);
+		}
+	);
+const validateConfirmPassword = Yup.string()
+	.required()
+	.oneOf([Yup.ref('password'), ''], 'Password not match');
 
 export const USER_MODEL_NAME = 'User';
 
-export interface User {
-	fullName: string;
-	username: string;
-	email: string;
-	password: string;
-	role: string;
-	profilePicture: string;
+export const userLoginDTO = Yup.object({
+	identifier: Yup.string().required(),
+	password: validatePassword,
+});
+
+export const userUpdatePasswordDTO = Yup.object({
+	oldPassword: validatePassword,
+	password: validatePassword,
+	confirmPassword: validateConfirmPassword,
+});
+
+export const userDTO = Yup.object({
+	fullName: Yup.string().required(),
+	username: Yup.string().required(),
+	email: Yup.string().email().required(),
+	password: validatePassword,
+	confirmPassword: validateConfirmPassword,
+});
+
+export type TypeUser = Yup.InferType<typeof userDTO>;
+
+export interface User extends Omit<TypeUser, 'confirmPassword'> {
 	isActive: boolean;
 	activationCode: string;
+	role: string;
+	profilePicture: string;
 	createdAt?: string;
 }
 
@@ -66,14 +110,12 @@ UserSchema.pre('save', function (next) {
 	const user = this;
 	user.password = encrypt(user.password);
 	user.activationCode = encrypt(user.id);
-
 	next();
 });
 
 UserSchema.post('save', async function (doc, next) {
 	try {
 		const user = doc;
-
 		const contentMail = await renderMailHtml('registration-success.ejs', {
 			username: user.username,
 			fullName: user.fullName,
@@ -88,8 +130,6 @@ UserSchema.post('save', async function (doc, next) {
 			subject: 'Aktivasi Akun Anda',
 			html: contentMail,
 		});
-
-		next();
 	} catch (error) {
 		console.log(error);
 	} finally {
